grammar.js
    program: $ => repeat(choice(
      $.pragma,
      $.functor_decl,
      $.component_decl,
      $.component_init,
      $.directive,
      $._rule,
      $.fact,
      $.relation_decl,
      $.type_decl,
      $.legacy_type_decl,
      $.preprocessor,
    )),

    // https://gcc.gnu.org/onlinedocs/cpp/preproc-Output.html
    preprocessor: $ => choice(
      $.preproc_line,
      $.preproc_include,
      $.preproc_def,
      $.preproc_if,
      $.preproc_ifdef,
      $.preproc_else,
      $.preproc_endif,
      $.preproc_pragma,
      $.preproc_use,
    ),

    preproc_line: $ => seq(
      '#line',
      field('line', NATURAL),
      field('file', $.string),
      // TODO(lb)
      // optional(field('flag', spaces(NATURAL))),
    ),

    preproc_include: $ => seq(
      '#include',
      field('file', choice($.string, $.include_string)),
      // TODO(lb)
      // optional(field('flag', spaces(NATURAL))),
    ),

    preproc_arg: _ => token(prec(-1, /\S([^/\n]|\/[^*]|\\\r?\n)*/)),

    preproc_def: $ => seq(
      '#define',
      field('name', $.ident),
      field('value', optional($.preproc_arg)),
      token.immediate(/\r?\n/),
    ),

    preproc_ifdef: $ => seq(
      choice('#ifdef', '#ifndef'),
      field('name', $.ident),
    ),

    preproc_if: $ => seq(
      '#if',
      $.preproc_arg
    ),

    preproc_else: $ => seq('#else'),

    preproc_endif: $ => seq('#endif'),

    preproc_pragma: $ => seq(
      '#pragma',
      $.preproc_arg
    ),

    directive: $ => seq(
      field('directive', $._directive_qualifier),
      commas1(field('relation', $.qualified_name)),
      optional(parens(commas(seq(
        field('key', $.ident),
        optional(seq(
          '=',
          field('value', $._directive_value)))
      ))))
    ),

    // directive_qualifier  ::= '.input' | '.output' | '.printsize' | '.limitsize'
    //
    // https://souffle-lang.github.io/directives#directive-qualifier
    //
    _directive_qualifier: $ => choice(
      '.input',
      '.limitsize',
      '.output',
      '.printsize',
    ),

    // directive_value ::= STRING | IDENT | NUMBER | 'true' | 'false'
    //
    // https://souffle-lang.github.io/directives#directive-value
    //
    _directive_value: $ => choice(
      $.string,
      $.ident,
      $.number,
    ),

    _rule: $ => choice(
      $.monotonic_rule,
      $.subsumptive_rule,
    ),

    // rule ::= atom ( ',' atom )* ':-' disjunction '.' query_plan?
    //
    // https://souffle-lang.github.io/rules#rule
    //
    string: $ => /"([^"]|\\")*"/,
    include_string: $ => /<([^<>])*>/,
    // NOTE: This is not anonymized because it is useful in tree-sitter queries.
    qualified_name: $ => prec.left(dots1($.ident)),
    ident: $ => /(_|\?|[A-Z]|[a-z])(([A-Z]|[a-z])|[0-9]|_|\?)*/,
  }
});

// Local Variables:
// js2-basic-offset: 2
// End:
