test/corpus/directive.txt
============================================================
Input directive
============================================================

.input rel()

---

(program
  (directive
    relation: (qualified_name (ident))))

============================================================
Output directive
============================================================

.output rel(IO=stdout)

---

(program
  (directive
    relation: (qualified_name (ident))
    key: (ident)
    value: (ident)))

============================================================
Qualified output directive
============================================================

.output foo.bar

---

(program
  (directive
    relation: (qualified_name (ident) (ident))))

============================================================
Output directive with empty parens
============================================================

.output baz()

---

(program
  (directive
    relation: (qualified_name (ident)))) 

============================================================
Output directive with compress
============================================================

.output baz (compress=true)

---

(program
  (directive
    relation: (qualified_name (ident))
    key: (ident)
    value: (ident)))

============================================================
Output multiple
============================================================

.output baz, bar

---

(program
  (directive
    relation: (qualified_name (ident))
    relation: (qualified_name (ident))))
